--- a/mkdocs_custom/main.html
+++ b/mkdocs_custom/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block site_meta %}
-    <meta property="og:image" content="%PUBLIC_URL%/img/screenshot.png" />
+    <meta property="og:image" content="img/screenshot.png" />
 {% endblock %}
