full path image

--- a/mkdocs_custom/main.html
+++ b/mkdocs_custom/main.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
 {% block site_meta %}
-    <meta property="og:image" content="img/screenshot.png" />
+    <meta property="og:image" content="https://katjaglassconsulting.gitlab.io/fork-project-description/img/screenshot.png" />
+    <meta property="og:description" content="This is a community site containing information about the OpenStudyBuilder Application. The OpenStudyBuilder is an open-source project for clinical study evaluations. This tool is a new approach for working with studies that once fully implemented will drive end-to-end consistency and more efficient processes.">
 {% endblock %}
